# pyOMRON

./: .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  ci.yml  combineprs.yml
device-reference/: index.html
docker/: README.md
docs/: device-reference.md  index.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
overrides/: main.html
pyOMRON/: __init__.py  codes.json  comm.py  comm_ser.py  device.py
pyomron/: __init__.py  codes.json  comm.py  daq.py  device.py  test.csv  util.py
search/: search_index.json
stylesheets/: extra.css
tests/test_example/: test_hello.py
