# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyomron"
version = "0.0.8"
description = "Python API for acquisition and control of OMRON G3PW Power Controller."
packages = [{include = "pyomron"}]
include = [{path = "pyomron/codes.json", format = ["sdist", "wheel"]}]
readme = "README.md"
authors = ["ulfsri <grayson.bellamy@ul.org>"]
license = "MIT"
repository = "https://github.com/ulfsri/pyOMRON"
homepage = "https://github.com/ulfsri/pyOMRON"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]



[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.29.0"
anyserial = "^0.1.0"
uvloop = "^0.19.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.7"
darglint = "^1.8.1"
mypy = "^1.0"
mypy-extensions = "^1.0.0"
pre-commit = "^3.6.0"
pyupgrade = "^3.16.0"
pydocstyle = "^6.1.1"
pylint = "^3.0.3"
pytest = "^8.1.0"
safety = "^3.0.1"
coverage = "^7.4.0"
coverage-badge = "^1.1.0"
pytest-html = "^4.1.1"
pytest-cov = "^5.0.0"
mkdocs-material = "^9.5.17"
mkdocstrings = {extras = ["python"], version = "^0.25.0"}
ruff = "^0.4.1"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.12
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "pyOMRON"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
